add grid view on home page + pop-up

--- a/clickthruv2/Home_default.html
+++ b/clickthruv2/Home_default.html
@@ -25,7 +25,7 @@
 				</head>
 	<body>
 		
-		<div class="container">
+		<div class="container" style="width:90%">
 			
 			<div class="masthead" style="position:relative">
 				<a href="#" class="logo"></a>
@@ -74,7 +74,7 @@
 			</div><!-- /.modal -->
 			
 			<!--sidebar-->
-			<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation" style="padding-left: 0;padding-top: 20px;width:25%;font-size:small">
+			<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation" style="padding-left: 0;padding-top: 20px;width:22%;font-size:small">
 				<div class="well sidebar-nav">
 					<ul class="nav">
 						<li>Professional Development</li>
@@ -126,7 +126,7 @@
 			</div><!-- /.modal -->
 			
 	        <!--product family-->
-	        <div style="float:left;width:65%;padding-top:20px;font-size:x-small" >
+	        <div style="float:left;width:58%;padding-top:20px;font-size:x-small" >
 		       	<table class="table table-striped">
 				 <thead style="font-size:small">
 				 <tr>
