add upcomming tranings

--- a/clickthruv2/Home_loggedin.html
+++ b/clickthruv2/Home_loggedin.html
@@ -101,7 +101,17 @@
 							<h3 class="modal-title">Fabric</h3>
 						</div>
 						<div class="modal-header">
-							Description
+							Description:<br>
+							
+							Fabric, a material so often taken for granted, makes a fascinating study for early childhood students. In the Fabric module students are introduced to a wide variety of fabrics in a systematic way, so that they become familiar with fabrics' properties, discover what happens when they are tested, and discover how they interact with other materials, including water.  FOSS expects students to:  </br>
+							<ul>
+							<li>Develop a growing curiosity and interest in the physical world around them.</li>
+							<li>Observe and describe the properties of different fabrics.</li>
+							<li>Compare different fabrics to discover how they are alike and how they are different.</li>
+							<li>Observe interactions of fabric with water and other substances.</li>
+							<li>Communicate observations.</li>
+							<li>Acquire the vocabulary associated with the properties of fabric.</li>
+							</ul>
 						</div>
 						<div class="modal-header">
 							Related PD Offerings</br>
@@ -313,15 +323,22 @@
 		
 		<div class="panel panel-info" style="float:right;margin-top:20px;width:18%;height:300px">
 		  <div class="panel-heading">
-			<h3 class="panel-title">Upcoming Trainings</h3>
+			<h4 class="panel-title">Upcoming Trainings</h4>
 		  </div>
 		  <div class="panel-body">
+		  	<table class="table" style="font-size:small">
+		  	<tr><td><h5>Wed, Dec 4</h5></td></tr>
+		  	<tr class="success"><td>8:30AM <a href="">Land & Water</a></td></tr>
+		  	<tr><td><h5>Thu, Dec 19</h5></td></tr>
+		  	<tr class="success"><td>9:30AM <a href="">Ecosystems</a></td></tr>
+		  	<tr class="success"><td>12:20PM <a href="">Tectonics</a></td></tr>
+		  	</table>
 		  </div>
 		</div>
 		
 		<div class="panel panel-info" style="float:right;margin-top:20px;width:18%;height:300px">
 		  <div class="panel-heading">
-			<h3 class="panel-title">Materials Ordered</h3>
+			<h4 class="panel-title">Materials Ordered</h4>
 		  </div>
 		  <div class="panel-body">
 		  </div>
