--- a/clickthruv2/View Schedule.html
+++ b/clickthruv2/View Schedule.html
@@ -71,11 +71,11 @@
           </tr> 
         </tbody>  
       </table> 
-      <p> Please select a section and click on 'Book Section' to reserve a seat</p>
+      <p> Please select a section and click on 'View Details' to reserve a seat</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button class="btn btn-success" type="submit" onclick="document.location.href='PD_details.html'" >Book Section</button>
+        <button class="btn btn-success" type="submit" onclick="document.location.href='PD_details.html'" >View Details</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
