Added Change Password page

--- a/clickthruv2/MyAccount_ChangePassword.html
+++ b/clickthruv2/MyAccount_ChangePassword.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Account- My Profile</title>
+    <title>My Account- Change Password</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -70,46 +70,37 @@
 		</div>
 	</div>
 
-	<div class="media" style="padding-top: 20px">
-		<a class="pull-left" href="#">
-		<img class="img-thumbnail" src="media/zuckerburg.jpg" alt="...">
-		</a>
-		<div class="media-body">
-			<h1>Mark Zuckerburg</h1>
-			<h4><strong>DOB</strong> 04/03/1988</h4>
-			<h4><strong>Phone</strong> 324-245-1244 <span class="glyphicon glyphicon-phone"></span> 324-245-1244 <span class="glyphicon glyphicon-phone-alt"></span></h4>
-			<h4><strong>E-mail</strong> <a href="mailto:#">mark.zuckerburg@assetorg.com</a></h4>
-			<button type="button" class="btn btn-default btn-small">
-  				<span class="glyphicon glyphicon-edit"></span> Edit Profile
-			</button>
-		</div>
-	</div>
-
-	<div class="panel panel-default" style="float:left;margin-top:20px;width:75%">
-  		<div class="panel-heading">
-    		<h3 class="panel-title">Address Information</h3>
+	<div class="row">
+  		<div class="col-md-4">
+  			<form role="form" style="float:left;margin-top:20px">
+  				<div class="form-group">
+    				<label for="currentPassword">Current Password</label>
+    				<input type="password" class="form-control" id="currentPassword" placeholder="Enter current password">
+  				</div>
+  				<div class="form-group">
+    				<label for="newPassword">New Password</label>
+    				<input type="password" class="form-control" id="newPassword" placeholder="New Password">
+  				</div>
+  				<div class="form-group">
+    				<label for="retypePassword">Retype Password</label>
+    				<input type="password" class="form-control" id="retypePassword" placeholder="Retype Password">
+  				</div>  	
+  				<button type="submit" class="btn btn-default">Submit</button>
+  				<button type="submit" class="btn btn-default">Clear</button>
+  			</form>
   		</div>
-  		<div class="panel-body">
-  			<div class="row">
-  				<div class="col-xs-6">
-  					<address>
-  						<strong>Twitter, Inc.</strong><br>
-  						795 Folsom Ave, Suite 600<br>
-  						San Francisco, CA 94107<br>
-  						<abbr title="Phone">P:</abbr> (123) 456-7890
-					</address>
-  				</div>
-  				<div class="col-xs-6">
-  					<address>
-  						<strong>Facebook, Inc.</strong><br>
-  						1601 Willow Rd<br>
-  						Menlo Park, CA 94025<br>
-  						<abbr title="Phone">P:</abbr> (650) 543-4800
-					</address>
-  				</div>
-			</div>    		
+  		<div class="col-md-4">
+  			<div class="well" style="margin-top:20px">
+  				<p>Password must meet the following criteria:</p>
+  				<ul>
+  					<li>At least 8 characters (Note: if you are an alumni who still uses BlitzMail or WebBlitz your password must be exactly 8 characters)</li>
+  					<li>Must contain at least one of the following special characters !#$%^*_</li>
+  					<li>The last two characters can only be letters or numbers.</li>
+  				</ul>
+  			<div>
   		</div>
 	</div>
+	
 
   <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
