Connected Home to My Account tabs

--- a/clickthruv2/Home_loggedin.html
+++ b/clickthruv2/Home_loggedin.html
@@ -42,7 +42,9 @@
 				  <li><a href="#">Professional Development</a></li>
 				  <li><a href="#">Material Support</a></li>
 				  <li><a href="#">Customer Support</a></li>
-				  <li style="float:right"><a href="#">Hello, XXXXX</a></li>
+				  <li><a href="#">My Cart</a></li>
+				  <li><a href="MyAccount_MyProfile.html">My Account</a></li>
+				  <li style="float:right"><a href="#">Hello, Mark Zuckerburg</a></li>
 				</ul>
 		    </div>
 	  </div>
