--- a/clickthruv2/MyAccount_ChangePassword.html
+++ b/clickthruv2/MyAccount_ChangePassword.html
@@ -39,12 +39,12 @@
 			  <li class="active"><a href="#">Online Service</a></li>
 			</ul>
 			<ul class="nav nav-tabs navbar-center" style="padding-top:50px">
-			  <li><a href="#">Home</a></li>
+			  <li><a href="Home_loggedin.html">Home</a></li>
 			  <li><a href="#">Professional Development</a></li>
 			  <li><a href="#">Material Support</a></li>
 			  <li><a href="#">Customer Support</a></li>
 			  <li><a href="#">My Cart</a></li>
-			  <li class="active"><a href="#">My Account</a></li>
+			  <li class="active"><a href="MyAccount_MyProfile.html">My Account</a></li>
 			  <li style="float:right"><a href="#">Hello, Mark Zuckerburg</a></li>
 			</ul>
 	    </div>
