--- a/clickthruv2/MyAccount_MyProfile.html
+++ b/clickthruv2/MyAccount_MyProfile.html
@@ -45,7 +45,7 @@
 			  <li><a href="#">Customer Support</a></li>
 			  <li><a href="#">My Cart</a></li>
 			  <li class="active"><a href="MyAccount_MyProfile.html">My Account</a></li>
-			  <li style="float:right"><a href="#">Hello, Mark Zuckerburg</a></li>
+			  <li style="float:right"><a href="MyAccount_TeacherList.html">Hello, Mark Zuckerburg</a></li>
 			</ul>
 	    </div>
   </div>
@@ -65,7 +65,7 @@
 				<li><a href="#">Order Report</a></li>
 				<li><a href="#">Registration Report</a></li>
 				<li>Teacher List (Only SOS)</li>
-				<li><a href="#">Teacher's List</a></li>
+				<li><a href="MyAccount_TeacherList.html">Teacher's List</a></li>
 			</ul>
 		</div>
 	</div>
