--- a/clickthru/index-header.html
+++ b/clickthru/index-header.html
@@ -191,7 +191,7 @@
 
                                         </li>
                                         <li  class="drop">
-                                            <a href="#">Services Online</a>
+                                            <a class="serviceonline"  href="#">Services Online</a>
                                             <ul><li>
                                                     <a href="#">Member Login</a> </ul>
 
@@ -199,25 +199,13 @@
                                     </ul>
                                 </nav>
                                 <nav>
-                                    <ul class="navigation">
-
-                                        <li>
-                                            <a href="#">Professional Development</a>
-
-                                        </li>
-                                        <li>
-                                            <a href="#">Materials Support</a>
-
-                                        </li>
-                                        <li>
-                                            <a href="#">Customer Support</a>
-
-                                        </li>
-
-
+                                    <ul class="submenu">
+                                        <li><a  href="#">Home</a></li>
+                                        <li><a href="#">Professional Development</a></li>
+                                        <li><a href="#">Materials Support</a></li>
+                                        <li><a  href="#">Customer Support</a></li>
 
                                     </ul>
-
                                 </nav>
 
 
