--- a/clickthru/advanced-material-search.html
+++ b/clickthru/advanced-material-search.html
@@ -201,7 +201,7 @@
 
                                         </li>
                                         <li  class="drop">
-                                            <a href="#">Services Online</a>
+                                            <a class="serviceonline" href="#">Services Online</a>
                                             <ul><li>
                                                     <a href="#">Member Login</a> </ul>
 
@@ -212,6 +212,16 @@
 
                                 </nav>
 
+                                
+                                <nav>
+                                    <ul class="submenu">
+                                        <li><a  href="#">Home</a></li>
+                                        <li><a   href="#">Professional Development</a></li>
+                                        <li><a class="active_sub" href="#">Materials Support</a></li>
+                                        <li><a  href="#">Customer Support</a></li>
+
+                                    </ul>
+                                </nav>
                                 <!-- Mobile Nav. Container -->
                                 <ul class="mobile-nav">
                                     <li class="responsive-searchbox">
@@ -242,8 +252,11 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <ul class="breadcrumbs">
-                                <li>
+                                 <li>
                                     <a href="#">Home</a>
+                                </li>
+                                 <li>
+                                    <a href="#">Materials Support</a>
                                 </li>
                                 <li>Advanced Search</li>
                             </ul>
@@ -347,10 +360,10 @@
                                         <tbody>
                                             <tr>
                                                 <td>EE102</td>
-                                                <td></td>
+                                                <td>Discover the concepts, skills and attitudes </br> embedded in a specific module.</td>
                                                 <td>Air & Weather</td>
                                                 <td>$165.00</td>
-                                                <td><input type="number"  value="0" min="1" /></td>
+                                                <td><input type="number"  style="width:50px;" value="0" min="1" /></td>
                                                 <td>
                                                     <a href="#"><i class="icon-plus">  </i> Add to Plan</a>
                                                     &nbsp; &nbsp;
@@ -359,10 +372,10 @@
                                             </tr>
                                             <tr>
                                                 <td>RFEE102</td>
-                                                <td>Animals 2 x 2</td>
+                                                <td>Discover the concepts, skills and attitudes </br> embedded in a specific module. </td>
                                                 <td>Animals 2 x 2</td>
                                                 <td>$120.00</td>
-                                                <td>  <input type="number"  value="0" min="1" /></td>
+                                                <td>  <input type="number" style="width:50px;" value="0" min="1" /></td>
                                                 <td>
                                                     <a href="#"><i class="icon-plus">  </i> Add to Plan</a>
                                                     &nbsp; &nbsp;
@@ -371,10 +384,10 @@
                                             </tr>
                                             <tr>
                                                 <td>XEE102C</td>
-                                                <td>Description</td>
-                                                <td>Balance & Motion</td>
+                                                <td>Discover the concepts, skills and attitudes </br> embedded in a specific module.</td>
+                                                 <td>Air & Weather</td>
                                                 <td>$180.00 </td>
-                                                <td>  <input type="number"  value="0" min="1" /></td>
+                                                <td>  <input type="number" style="width:50px;" value="0" min="1" /></td>
                                                 <td>
                                                     <a href="#"><i class="icon-plus">  </i> Add to Plan</a>
                                                     &nbsp; &nbsp;
@@ -383,10 +396,10 @@
                                             </tr>
                                             <tr>
                                                 <td>EE102LX</td>
-                                                <td>Description</td>
+                                                <td>Discover the concepts, skills and attitudes </br> embedded in a specific module.</td>
                                                 <td>Biodiversity & the Development of Organisims</td>
                                                 <td>$46.00</td>
-                                                <td>  <input type="number" value="0" min="0" /></td>
+                                                <td>  <input type="number" style="width:50px;" value="0" min="0" /></td>
                                                 <td>
                                                     <a href="#"><i class="icon-plus">  </i> Add to Plan</a>
                                                     &nbsp; &nbsp;
@@ -395,11 +408,11 @@
                                             </tr>
                                             <tr>
                                                 <td>F1203LX</td>
-                                                <td>Description</td>
+                                                <td>Discover the concepts, skills and attitudes </br> embedded in a specific module.</td>
                                                 <td>Biodiversity & the Development of Organisims</td>
                                                 <td>$153.00</td>
                                                 <td>
-                                                    <input type="number"  value="0" min="1" />
+                                                    <input type="number"  style="width:50px;" value="0" min="1" />
                                                 </td>
                                                 <td>
                                                     <a href="#"><i class="icon-plus">  </i> Add to Plan</a>
@@ -432,71 +445,72 @@
                     </div>
                 </div>
 
-                <footer>
-                    <div class="footer">
+            </div>
+            <footer>
+                <div class="footer">
 
-                        <div class="copyright">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-7 col-sm-7">
-                                        <div class="copyright-text">&copy; 2013 ASSET STEM Education | ACHIEVING STUDENT SUCCESS THROUGH EXCELLENCE IN TEACHING. </div>
-                                    </div>
-                                    <div class="col-md-5 col-sm-5">
-                                        <ul class="list-inline copyright-text">
-                                            <li>Donate Now</li>
-                                            <li>Careers</li>
-                                            <li>Media Center</li>
-                                            <li>Media Center</li>
-                                        </ul>
+                    <div class="copyright">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-7 col-sm-7">
+                                    <div class="copyright-text">&copy; 2013 ASSET STEM Education | ACHIEVING STUDENT SUCCESS THROUGH EXCELLENCE IN TEACHING. </div>
+                                </div>
+                                <div class="col-md-5 col-sm-5">
+                                    <ul class="list-inline copyright-text">
+                                        <li>Donate Now</li>
+                                        <li>Careers</li>
+                                        <li>Media Center</li>
+                                        <li>Media Center</li>
+                                    </ul>
 
 
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </footer>
-            </div>
+                </div>
+            </footer>
+        </div>
 
 
-            <script type="text/javascript" src="js/_jq.js"></script>
-            <script type="text/javascript" src="js/_jquery.placeholder.js"></script>
-            <script type="text/javascript" src="js/bootstrap.min.js"></script>
-            <script src="js/activeaxon_menu.js" type="text/javascript"></script>
-            <script src="js/animationEnigne.js" type="text/javascript"></script>
-            <script src="js/arwa.js" type="text/javascript"></script>
-            <script src="js/bootstrap.min.js" type="text/javascript"></script>
-            <script src="js/ie-fixes.js" type="text/javascript"></script>
-            <script src="js/jquery.base64.js" type="text/javascript"></script>
-            <script src="js/jquery.carouFredSel-6.2.1-packed.js" type="text/javascript"></script>
-            <script src="js/jquery.cycle.js" type="text/javascript"></script>
-            <script src="js/jquery.cycle2.carousel.js" type="text/javascript"></script>
-            <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-            <script src="js/jquery.easytabs.js" type="text/javascript"></script>
-            <script src="js/jquery.eislideshow.js" type="text/javascript"></script>
-            <script src="js/jquery.isotope.js" type="text/javascript"></script>
-            <script src="js/jquery.prettyPhoto.js" type="text/javascript"></script>
-            <script src="js/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
-            <script src="js/jquery.themepunch.revolution.js" type="text/javascript"></script>
-            <script src="js/jquery.tipsy.js" type="text/javascript"></script>
-            <script src="js/jquery.validate.js" type="text/javascript"></script>
-            <script src="js/jQuery.XDomainRequest.js" type="text/javascript"></script>
-            <script src="js/retina.js" type="text/javascript"></script>
-            <script src="js/timeago.js" type="text/javascript"></script>
-            <script src="js/tweetable.jquery.js" type="text/javascript"></script>
+        <script type="text/javascript" src="js/_jq.js"></script>
+        <script type="text/javascript" src="js/_jquery.placeholder.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script src="js/activeaxon_menu.js" type="text/javascript"></script>
+        <script src="js/animationEnigne.js" type="text/javascript"></script>
+        <script src="js/arwa.js" type="text/javascript"></script>
+        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="js/ie-fixes.js" type="text/javascript"></script>
+        <script src="js/jquery.base64.js" type="text/javascript"></script>
+        <script src="js/jquery.carouFredSel-6.2.1-packed.js" type="text/javascript"></script>
+        <script src="js/jquery.cycle.js" type="text/javascript"></script>
+        <script src="js/jquery.cycle2.carousel.js" type="text/javascript"></script>
+        <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
+        <script src="js/jquery.easytabs.js" type="text/javascript"></script>
+        <script src="js/jquery.eislideshow.js" type="text/javascript"></script>
+        <script src="js/jquery.isotope.js" type="text/javascript"></script>
+        <script src="js/jquery.prettyPhoto.js" type="text/javascript"></script>
+        <script src="js/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
+        <script src="js/jquery.themepunch.revolution.js" type="text/javascript"></script>
+        <script src="js/jquery.tipsy.js" type="text/javascript"></script>
+        <script src="js/jquery.validate.js" type="text/javascript"></script>
+        <script src="js/jQuery.XDomainRequest.js" type="text/javascript"></script>
+        <script src="js/retina.js" type="text/javascript"></script>
+        <script src="js/timeago.js" type="text/javascript"></script>
+        <script src="js/tweetable.jquery.js" type="text/javascript"></script>
 
-            <script>
+        <script>
 
 
 
-                $(function() {
-                    //   $('#search-results').hide();
+            $(function() {
+                 $('#search-results').hide();
 
-                    $('#submit').click(function() {
-                        $('#search-results').show();
-                    });
+                $('#submit').click(function() {
+                    $('#search-results').show();
                 });
+            });
 
-            </script>
+        </script>
     </body>
 </html>
