--- a/clickthru/PD_Details_Page.html
+++ b/clickthru/PD_Details_Page.html
@@ -313,18 +313,18 @@
 
                                             <div class ="media">
                                                 <a class="pull-left" href="#">
-                                                    <img class="media-object" src ="img/logo,gif" height="20" width="20">
+                                                    <img class="media-object" src ="img/PatternsAllAround.png" height="20" width="20">
                                                 </a>
                                                 <div class="media-body">
-                                                    <p> PD1 </p>
+                                                    <p class="content-label"> <a href="#">Patterns All Around BBS </a></p>
                                                 </div>
                                             </div>
                                             <div class ="media top-buffer">
                                                 <a class="pull-left" href="#">
-                                                    <img class="media-object" src ="img/logo,gif" height="20" width="20">
+                                                    <img class="media-object" src ="img/FabricFOSS.png" height="20" width="20">
                                                 </a>
                                                 <div class="media-body">
-                                                    <p> PD1 </p>
+                                                    <p class="content-label"> <a href="#">Fabric FOSS </a></p>
                                                 </div>
                                             </div>
                                         </div>
@@ -337,18 +337,18 @@
                                             <!-- list group -->
                                             <div class ="media">
                                                 <a class="pull-left" href="#">
-                                                    <img class="media-object" src ="img/logo,gif" height="20" width="20">
+                                                    <img class="media-object" src ="img/PushPull.png" height="20" width="20">
                                                 </a>
                                                 <div class="media-body">
-                                                    <p> PD1 </p>
+                                                    <p class="content-label"> <a href="#">Push, Pull, Go BBS </a></p>
                                                 </div>
                                             </div>
                                             <div class ="media top-buffer">
                                                 <a class="pull-left" href="#">
-                                                    <img class="media-object" src ="img/logo,gif" height="20" width="20">
+                                                    <img class="media-object" src ="img/Wood.png" height="20" width="20">
                                                 </a>
                                                 <div class="media-body">
-                                                    <p> PD1 </p>
+                                                    <p class="content-label"> <a href="#">Wood & Paper FOSS </a> </p>
                                                 </div>
                                             </div>
                                         </div>
@@ -363,13 +363,13 @@
 
                                 <div class="media">
                                     <a class="pull-left" href="#">
-                                        <img class="media-object" src="img/logo.gif" height="120" width="120">
+                                        <img class="media-object" src="img/FabricFOSS.png" height="120" width="120">
                                     </a>
-                                    <div class="media-heading">
-                                        PD 1
+                                    <div class="media-heading content-label">
+                                        Fabric FOSS
                                     </div>
-                                    <div class="media-body">
-                                        <p> This is the body of the PD</p>
+                                    <div class="media-body content-label">
+                                        <p class="content-label"> Price: $500 </p>
                                     </div>
                                 </div>
                             </div>
@@ -379,7 +379,10 @@
                                 <div class="panel panel-default">
                                     <div class="panel-heading">Description</div>
                                     <div class="panel-body">
-                                        <p>This the detailed description of the PD</p>
+                                        <p class="content-label">Fabric, a material so often taken for granted, makes a fascinating study for early-childhood
+                                            students. In the Fabric module, students are introduced to a wide variety of fabrics in a
+                                            systematic way so that they become familiar with fabrics’ properties, discover what happens
+                                            when they are tested and discover how they interact with other materials, including water.</p>
                                     </div>
                                 </div>
                             </div>
@@ -394,11 +397,11 @@
                                                     <a class="pull-left" href="#">
                                                         <img class="media-object" src="img/logo.gif" height="20" width="20">
                                                     </a>
-                                                    <div class="media-heading">
-                                                        Material 1
+                                                    <div class="media-heading content-label">
+                                                        <a href="#">EE112</a> 
                                                     </div>
-                                                    <div class="media-body">
-                                                        <p> $$$$</p>
+                                                    <div class="media-body content-label">
+                                                        <p> $135.00 </p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -408,10 +411,10 @@
                                                         <img class="media-object" src="img/logo.gif" height="20" width="20">
                                                     </a>
                                                     <div class="media-heading">
-                                                        Material 2
+                                                        <a href="#"> RFEE112 </a>
                                                     </div>
                                                     <div class="media-body">
-                                                        <p> $$$$</p>
+                                                        <p> $200</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -441,10 +444,10 @@
                                                         <div class="row">
                                                             <div class="col-md-6">
                                                                 <ul class="list-group">
-                                                                    <li class="list-group-item"> Section: </li>
-                                                                    <li class="list-group-item"> Start Date:</li>
-                                                                    <li class="list-group-item"> End Date:</li>
-                                                                    <li class="list-group-item"> Price:</li>
+                                                                    <li class="list-group-item"> Section: Section A</li>
+                                                                    <li class="list-group-item"> Start Date: 11/23/13</li>
+                                                                    <li class="list-group-item"> End Date: 11/24/13</li>
+                                                                    <li class="list-group-item"> Price: $299</li>
                                                                 </ul>
                                                             </div>
                                                             <div class="col-md-6">
@@ -463,7 +466,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="row" style="margin-top: 20px">
-                                                            <div class="col-md-4 collapse-group">
+                                                            <div class="collapse-group">
                                                                 <div class="collapse" id="viewFullSchedule">
                                                                     <table class="table table-bordered">
                                                                         <thead>
@@ -476,6 +479,24 @@
                                                                                 <th>Location</th>
                                                                             </tr>
                                                                         </thead>
+                                                                        <tbody>
+                                                                            <tr>                                                                              ></tr>
+                                                                            <td> Session A</td>
+                                                                            <td> 11/23/13</td>
+                                                                            <td> 8:00am </td>
+                                                                            <td> 2:00pm</td>
+                                                                            <td> On-site</td>
+                                                                            <td> Asset Stem Office</td>
+                                                                            </tr>
+                                                                            <tr>                                                                              ></tr>
+                                                                            <td> Session A</td>
+                                                                            <td> 11/24/13</td>
+                                                                            <td> 8:00am </td>
+                                                                            <td> 2:00pm</td>
+                                                                            <td> On-site</td>
+                                                                            <td> Asset Stem Office</td>
+                                                                            </tr>
+                                                                        </tbody>
                                                                     </table>
                                                                 </div>
                                                                 <p> <a class="btn btn-defualt" data-toggle="collapse" data-target="#viewFullSchedule">
