--- a/clickthru/PDLandingPage.html
+++ b/clickthru/PDLandingPage.html
@@ -201,7 +201,7 @@
 
                                         </li>
                                         <li  class="drop">
-                                            <a href="#">Services Online</a>
+                                            <a class="serviceonline" href="#">Services Online</a>
                                             <ul><li>
                                                     <a href="#">Member Login</a> </ul>
 
@@ -212,6 +212,16 @@
 
                                 </nav>
 
+
+                                <nav>
+                                    <ul class="submenu">
+                                        <li><a  href="#">Home</a></li>
+                                        <li><a class="active_sub" href="#">Professional Development</a></li>
+                                        <li><a  href="#">Materials Support</a></li>
+                                        <li><a  href="#">Customer Support</a></li>
+
+                                    </ul>
+                                </nav>
                                 <!-- Mobile Nav. Container -->
                                 <ul class="mobile-nav">
                                     <li class="responsive-searchbox">
@@ -245,6 +255,9 @@
                                 <li>
                                     <a href="#">Home</a>
                                 </li>
+                                <li>
+                                    <a href="#">Materials Support</a>
+                                </li>
                                 <li>Advanced Search</li>
                             </ul>
                         </div>
@@ -255,8 +268,6 @@
             <div class="body-wrapper">
                 <div class="container">
                     <!-- PAGE CONTENTS SHOULD GO HERE -->
-
-
                     <!-- search bar on top-->
                     <div class="row">
                         <div class="col-md-8 col-md-offset-3">
@@ -437,71 +448,72 @@
                     </div>
                 </div>
 
-                <footer>
-                    <div class="footer">
+            </div>
+            <footer>
+                <div class="footer">
 
-                        <div class="copyright">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-7 col-sm-7">
-                                        <div class="copyright-text">&copy; 2013 ASSET STEM Education | ACHIEVING STUDENT SUCCESS THROUGH EXCELLENCE IN TEACHING. </div>
-                                    </div>
-                                    <div class="col-md-5 col-sm-5">
-                                        <ul class="list-inline copyright-text">
-                                            <li>Donate Now</li>
-                                            <li>Careers</li>
-                                            <li>Media Center</li>
-                                            <li>Media Center</li>
-                                        </ul>
+                    <div class="copyright">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-7 col-sm-7">
+                                    <div class="copyright-text">&copy; 2013 ASSET STEM Education | ACHIEVING STUDENT SUCCESS THROUGH EXCELLENCE IN TEACHING. </div>
+                                </div>
+                                <div class="col-md-5 col-sm-5">
+                                    <ul class="list-inline copyright-text">
+                                        <li>Donate Now</li>
+                                        <li>Careers</li>
+                                        <li>Media Center</li>
+                                        <li>Media Center</li>
+                                    </ul>
 
 
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </footer>
-            </div>
+                </div>
+            </footer>
+        </div>
 
 
-            <script type="text/javascript" src="js/_jq.js"></script>
-            <script type="text/javascript" src="js/_jquery.placeholder.js"></script>
-            <script type="text/javascript" src="js/bootstrap.min.js"></script>
-            <script src="js/activeaxon_menu.js" type="text/javascript"></script>
-            <script src="js/animationEnigne.js" type="text/javascript"></script>
-            <script src="js/arwa.js" type="text/javascript"></script>
-            <script src="js/bootstrap.min.js" type="text/javascript"></script>
-            <script src="js/ie-fixes.js" type="text/javascript"></script>
-            <script src="js/jquery.base64.js" type="text/javascript"></script>
-            <script src="js/jquery.carouFredSel-6.2.1-packed.js" type="text/javascript"></script>
-            <script src="js/jquery.cycle.js" type="text/javascript"></script>
-            <script src="js/jquery.cycle2.carousel.js" type="text/javascript"></script>
-            <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-            <script src="js/jquery.easytabs.js" type="text/javascript"></script>
-            <script src="js/jquery.eislideshow.js" type="text/javascript"></script>
-            <script src="js/jquery.isotope.js" type="text/javascript"></script>
-            <script src="js/jquery.prettyPhoto.js" type="text/javascript"></script>
-            <script src="js/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
-            <script src="js/jquery.themepunch.revolution.js" type="text/javascript"></script>
-            <script src="js/jquery.tipsy.js" type="text/javascript"></script>
-            <script src="js/jquery.validate.js" type="text/javascript"></script>
-            <script src="js/jQuery.XDomainRequest.js" type="text/javascript"></script>
-            <script src="js/retina.js" type="text/javascript"></script>
-            <script src="js/timeago.js" type="text/javascript"></script>
-            <script src="js/tweetable.jquery.js" type="text/javascript"></script>
+        <script type="text/javascript" src="js/_jq.js"></script>
+        <script type="text/javascript" src="js/_jquery.placeholder.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script src="js/activeaxon_menu.js" type="text/javascript"></script>
+        <script src="js/animationEnigne.js" type="text/javascript"></script>
+        <script src="js/arwa.js" type="text/javascript"></script>
+        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="js/ie-fixes.js" type="text/javascript"></script>
+        <script src="js/jquery.base64.js" type="text/javascript"></script>
+        <script src="js/jquery.carouFredSel-6.2.1-packed.js" type="text/javascript"></script>
+        <script src="js/jquery.cycle.js" type="text/javascript"></script>
+        <script src="js/jquery.cycle2.carousel.js" type="text/javascript"></script>
+        <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
+        <script src="js/jquery.easytabs.js" type="text/javascript"></script>
+        <script src="js/jquery.eislideshow.js" type="text/javascript"></script>
+        <script src="js/jquery.isotope.js" type="text/javascript"></script>
+        <script src="js/jquery.prettyPhoto.js" type="text/javascript"></script>
+        <script src="js/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
+        <script src="js/jquery.themepunch.revolution.js" type="text/javascript"></script>
+        <script src="js/jquery.tipsy.js" type="text/javascript"></script>
+        <script src="js/jquery.validate.js" type="text/javascript"></script>
+        <script src="js/jQuery.XDomainRequest.js" type="text/javascript"></script>
+        <script src="js/retina.js" type="text/javascript"></script>
+        <script src="js/timeago.js" type="text/javascript"></script>
+        <script src="js/tweetable.jquery.js" type="text/javascript"></script>
 
-            <script>
+        <script>
 
 
 
-                $(function() {
-                    $('#search-results').hide();
+            $(function() {
+                $('#search-results').hide();
 
-                    $('#submit').click(function() {
-                        $('#search-results').show();
-                    });
+                $('#submit').click(function() {
+                    $('#search-results').show();
                 });
+            });
 
-            </script>
+        </script>
     </body>
 </html>
