fix popup issue

--- a/clickthru/online_service_home_after_loginin.html
+++ b/clickthru/online_service_home_after_loginin.html
@@ -79,6 +79,37 @@
         <div class="sticky-navigation" id="sticky-navigation"></div>
         <!-- Sticky Nav -->
 
+		<!-- Product Family Modal (Fabric)-->
+			<div class="modal fade" id="pfModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h3 class="modal-title">Fabric</h3>
+						</div>
+						<div class="modal-header">
+							Description
+						</div>
+						<div class="modal-header">
+							Related PD Offerings</br>
+							<ul>
+							<li><a href="">Fabric(FOSS)</a></li>
+							</ul>
+						</div>
+						<div class="modal-body">
+							Related Material</br>
+							<ul>
+							<li><a href="">FOSS Fabric</a></li>
+							<li><a href="">FOSS Fabric Lease Extension</a></li>
+							<li><a href="">FOSS Fabric - Refill Kit</a></li>
+							<li><a href="">FOSS Fabric - xConsume</a></li>
+							<li><a href="">Teacher Guide - FOSS Fabric</a></li>
+							</ul>
+						</div>
+					</div><!-- /.modal-content -->
+				</div><!-- /.modal-dialog -->
+			</div><!-- /.modal -->
+			
         <div id="wrapper">
 
             <div class="top_wrapper">
